# Androids

./: README.md
MyApplication/app/: CMakeLists.txt  CmakeLists.txt  build.gradle
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/aidl/com/example/myapplication/ProxyPattern/: IBankAidl.aidl
MyApplication/app/src/main/assets/: editor.html
MyApplication/app/src/main/cpp/: BufferArea.cpp  BufferArea.h  VideoChannel.cpp  VideoChannel.h  bspatch.h  native-lib.cpp  safe_queue.h  util.h
MyApplication/app/src/main/java/com/enjoy/fix/patch/: ClassVerifier.java  EnjoyFix.java  ShareReflectUtil.java  V23.java
MyApplication/app/src/main/java/com/example/myapplication/: AudioMainActivity.java  BufferArea.java  CallableDemo.java  CallableTest.java  Camera2Activity.java  CameraHelper.java  Consumer.java  DerryPusher.java  FragmentActivity.java  HandlerActivity.java  JniActivity.java  MATRef.java  MainActivity.java  MainActivityIntents.java  MainCode.java  MatMainActivity.java  MyAnnotationCompiler.java  MyCallable.java  MyIntentService.java  MyThread.java  MysThread.java  NDKtools.java  OneFragment.java  OrientationActivity.java  Producer.java  RtmpMainActivity.java  SampleFirst.kt  SampleFirstStartup.java  SampleSecond.kt  SampleSecondStartup.java  Student.java  TestActivity.java  TestDataModel.java  TestThreadPool.java  ThreadLockSecurity.java  ThreadSynchroniazedMethodSecurity.java  ThreadSynchronizedSecurity.java  UpdateUtil.java  VideoChannel.java  WebviewMainActivity.java  (+4 more)
MyApplication/app/src/main/java/com/example/myapplication/GlSurface/: CameraGLSurfaceView.java  CameraInterface.java  CustomRender.java  DirectDrawer.java  GLRenderer.java  GLRendererBase.java  GlSurfaceActivity.java  PolygonRenderer.java  STextureMainActivity.java
MyApplication/app/src/main/java/com/example/myapplication/GlassManage/: GlassLagerRelativeLayout.java  MainActivityGlass.java
MyApplication/app/src/main/java/com/example/myapplication/ProxyPattern/: BankBinder.java  BankService.java  IBank.java  ProxyActivity.java
MyApplication/app/src/main/java/com/example/myapplication/RecycleviewUse/: MainRecycleviewActivity.java  (+1 more)
MyApplication/app/src/main/res/anim/: g40_anim.xml
MyApplication/app/src/main/res/layout/: activity_aidl_main.xml  activity_audio_main.xml  activity_camera2.xml  activity_fragment.xml  activity_gl_surface.xml  activity_handler.xml  activity_jni.xml  activity_main_glass.xml  activity_main_intents.xml  activity_main_recycleview.xml  activity_main_scroll.xml  activity_mat_main.xml  activity_orientation.xml  activity_proxy.xml  activity_rtmp_main.xml  activity_single_task.xml  activity_single_top.xml  activity_standard.xml  activity_stexture_main.xml  activity_task_main.xml  activity_test.xml  activity_webview_main.xml  fragment_one.xml  g40_glass_layout.xml  rlv_list.xml
MyApplication/rtspplay/src/main/cpp/: CMakeLists.txt  Nalu.cpp  live555.cpp  nativeqwe.cpp  queue.h
MyApplication/zachery_push/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  safe_queue_s.h  util.h
MyApplication/zachery_push/src/main/cpp/librtmp/: CMakeLists.txt
(+100 files in other folders)
